--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pytest = "^7.4.2"
 ruff = "^0.0.292"
 mypy = "^1.6.0"
 black = "^23.9.1"
+opencv-stubs = "^0.0.8"
 
 [tool.mypy]
 # from https://careers.wolt.com/en/blog/tech/professional-grade-mypy-configuration & https://docs.pydantic.dev/latest/integrations/mypy/
@@ -30,10 +31,13 @@ disallow_untyped_defs = true
 show_error_codes = true
 
 [tool.ruff]
-line-length = 88
+line-length = 140
 target-version = "py311"
-# select = ["ALL"]
+select = ["ALL"]
 ignore = ["D100", "D104"]
+
+[tool.ruff.pydocstyle]
+convention = "google"
 
 [tool.ruff.per-file-ignores]
 # from https://github.com/astral-sh/ruff/issues/4368
@@ -43,6 +47,8 @@ ignore = ["D100", "D104"]
     "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
     "PLR2004", # Magic value used in comparison
     "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
+    "SLF001",  # Allow private member access
+    "D103",    # Do not require docstrings in tests
 ]
 
 [tool.black]
